--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,15 +5,17 @@
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/orange </item>
         <item name="colorOnPrimary">@color/black</item>
-
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/light_grey</item>
         <item name="colorSecondaryVariant">@color/dark_grey</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">@color/purple_200</item>
+
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/orange</item>
         <!-- Customize your theme here. -->
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="hintTextColor">@color/white</item>
         <item name="android:navigationBarColor">@color/orange</item> <!-- couleur de la barre du bas-->
         <item name="android:forceDarkAllowed" tools:targetApi="29">false</item>
         <item name="android:windowBackground">@color/black</item> <!-- couleur de la barre du haut-->
@@ -35,4 +37,8 @@
         <item name="android:textSize">30sp</item>
     </style>
 
+    <style name="TabBarItem" parent="DefaultTextStyle">
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="android:textSize">20sp</item>
+    </style>
 </resources>
